<resources>
    <string name="app_name">Billing_app</string>
    <string name="dashboard">Dashboard</string>
    <string name="parties">Parties</string>
    <string name="item">Item</string>
    <string name="more">More</string>
    <string name="to_collect">To Collect</string>
    <string name="to_pay">To Pay</string>
    <string name="total_sales">Total Sales</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="transaction">Transaction</string>
    <string name="new_invoice">New Invoice</string>
    <string name="create_party">Create Party</string>
    <string name="add_item">ADD ITEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="party_name">Party Name</string>
    <string name="title_activity_new_invoice">newInvoice</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="create_bill_invoice">Create Bill / Invoice</string>
    <string name="invoice">Invoice</string>
    <string name="settings">Settings</string>
    <string name="contect_number">Contect Number</string>
    <string name="party_type">Party Type</string>
    <string name="business_info">Business Info</string>
    <string name="save">Save</string>
    <string name="required">*</string>
    <string name="credit_info">Credit Info</string>
    <string name="street_address">Street Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="item_name">Item Name</string>
    <string name="item_type">Item Type</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="pricing">Pricing</string>
    <string name="sales_price">Sales Price</string>
    <string name="ex_pen">Ex. Pen</string>
    <string name="ex_nos_pkt">Ex. NOS / PKT</string>
    <string name="_130">130</string>
    <string name="content_description_start_icon">indian rupees</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="sales_price_menu_without_tax">Without Tax</string>
    <string name="sales_price_menu_with_tax">With Tax</string>
    <string name="hsn_code">HSN Code</string>
    <string name="gst">GST</string>
    <string name="business_and_gst">Business And GST</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="gst_number">GST Number</string>
    <string name="pan_number">PAN Number</string>
    <string name="use_this_to_change_the_number_on_invoice">Use this to change the number on Invoice</string>
    <string name="phone_number">Phone Number</string>
    <string name="business_email">Business Email</string>
    <string name="this_email_will_be_shown_on_invoices">This email will be shown on invoices</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="business_name">Business Name</string>
    <string name="business_gst_number">Business GST Number</string>
    <string name="back_arrow">Back arrow</string>
    <string name="unit">Unit</string>
    <string name="business_address">Business Address</string>
    <string name="state">State</string>
</resources>