<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.emailsheet">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/n1"
            android:text="@string/business_email"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/n2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/this_email_will_be_shown_on_invoices"
            android:layout_below="@+id/n1"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_email"
            android:layout_below="@id/n2"
            android:id="@+id/n3"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/n4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/n3"
            android:layout_margin="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sheetnumberinput"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C8A8DC"
            android:layout_below="@id/n4"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="25sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>